examples/test/testpolicy11932.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy11932
  namespace: namespace421
spec:
  podSelector:
    matchLabels:
      key25: value29
      key31: value10
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key4: value32
      podSelector:
        matchLabels:
          key2: value40
          key5: value43
          key45: value48
